[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-lens"
version = "0.1.0"
description = "A lightweight MLOps tool for data quality and drift detection."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "click"
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
py-modules = ["core", "anomaly", "report", "generate_sample_data"]
